Add a menu to context menu

--- a/src/options/index.html
+++ b/src/options/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Tril option page</title>
 </head>
 <body>
-
+  <h1>Tril option page</h1>
 </body>
 </html>
